force-app/main/default/objects/TDX_Asset__c/TDX_Asset__c.object-meta.xml
<CustomObject>
    <description>Represents any asset (e.g., a hotel or an airline)</description>
    <label>TDX Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TDX Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>