force-app/main/default/objects/TDX_Asset__c/fields/Amenities__c.field-meta.xml
<CustomField>
    <fullName>Amenities__c</fullName>
    <description>Amenities is the custom field of type multi-picklist that is used to store the Amenities provided by the Hotel.</description>
    <label>Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gym</fullName>
            </value>
            <value>
                <fullName>Swimming Pool</fullName>
            </value>
            <value>
                <fullName>Game Zone</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Playground</fullName>
            </value>
            <value>
                <fullName>Balling Alley</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Camp Fire</fullName>
            </value>
            <value>
                <fullName>Mountain Tracking</fullName>
            </value>
            <value>
                <fullName>Ropeway Travel</fullName>
            </value>
            <value>
                <fullName>Beautiful Lakes</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>