force-app/main/default/objects/TDX_Asset__c/recordTypes/Airline.recordType-meta.xml
<RecordType>
    <fullName>Airline</fullName>
    <active>true</active>
    <label>Airline</label>
</RecordType>