force-app/main/default/objects/TDX_Asset__c/listViews/Airlines.listView-meta.xml
<ListView>
    <fullName>Airlines</fullName>
    <columns>NAME</columns>
    <columns>Overall_Rating__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TDX_Asset__c.Airline</value>
    </filters>
    <label>Airlines</label>
</ListView>