force-app/main/default/objects/TDX_Asset__c/listViews/Hotels.listView-meta.xml
<ListView>
    <fullName>Hotels</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Overall_Rating__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TDX_Asset__c.Hotel</value>
    </filters>
    <label>Hotels</label>
</ListView>